# glider

./: .gitignore  LICENSE  README.md  allocator.c  client_buffer.c  drm_dumb_allocator.c  gbm_allocator.c  gl_renderer.c  input.c  main.c  meson.build  output.c  renderer.c  swapchain.c  wlr_buffer.c  xdg_shell.c
backend/: backend.c  connector.c  crtc.c  device.c  plane.c  prop.c
include/: allocator.h  client_buffer.h  drm_dumb_allocator.h  gbm_allocator.h  gl_renderer.h  renderer.h  server.h  surface.h  swapchain.h  wlr_buffer.h  xdg_shell.h
include/backend/: backend.h
protocol/: meson.build
subprojects/: libliftoff.wrap  wlroots.wrap
